# alphaquant

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  MVP-GAP.html  Makefile  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260425_0001_init_users.py
backend/backend/: config.py  main.py
backend/backend/agents/: value_analyst.py
backend/backend/agents/nodes/: _pro_gate.py  dcf_model.py  event_impact.py  event_impact_math.py  event_sentiment.py  event_sentiment_math.py  financial_health.py  industry_mapping.py  investment_thesis.py  logic_trace.py  moat_analysis.py  qualitative_analysis.py  relative_valuation.py  relative_valuation_math.py  risk_yoy_diff.py  strategy.py
backend/backend/api/: admin.py  auth.py  dependencies.py  routes.py
backend/backend/models/: agent_state.py  events.py  financial.py  sec.py
backend/backend/prompts/: __init__.py  event_analysis_v1.yaml  event_filter_v1.yaml  investment_thesis_v1.yaml  mdna_analysis_v1.yaml  moat_analysis_v1.yaml  risk_factors_v1.yaml  risk_yoy_diff_v1.yaml  sentiment_v1.yaml
backend/backend/services/: db.py  finnhub_client.py  llm_sentiment.py  market_data.py  rate_limit.py  request_context.py  runtime_settings.py  sec_agent.py  sec_client.py  tenk_parser.py  ticker_resolver.py
backend/backend/services/auth/: __init__.py  dependencies.py  google_oauth.py  magic_link.py  models.py  passwords.py  service.py  tokens.py
backend/backend/services/llm/: __init__.py  accounting.py  budget.py  client.py  (+3 more)
(+60 files in other folders)
